@startuml

class Salle {
    - id: int
    - nom: String
    - nombreDePlaces: int
}

class Seance {
    - id: int
    - dateProjection: DateTime
    - tarifNormal: float
    - tarifReduit: float
}

class Film {
    - id: int
    - titre: String
    - duree: int
}

class Utilisateur {
    - id: int
    - username: String
    - motDePasse: String
    - roles: String[]
}

class Reservation {
    - id: int
    - nombreDePlaces: int
    - dateReservation: DateTime
    - montantTotal: float
}

Salle "1..*" -- "1..1" Seance : contient >
Seance "1..1" -- "1..*" Film : concerne >
Utilisateur "0..*" -- "1..1" Reservation : effectue >
Seance "1..*" -- "1..*" Reservation : comprend >

@enduml
